...
                VStack(alignment: .leading, spacing: 10) {
                    //MARK: - NAME
                    TextField(L10n.shared.localize("form_list_add_name"), text: $name)
                        .focused($isFocused)
                        .lineLimit(1)
                        .autocorrectionDisabled(true)
                        .accessibilityIdentifier("list_name_field")

                    Divider()

                    //MARK: - DESCRIPTION
                    if vm.isListDescriptionVisible {
                        TextField(L10n.shared.localize("form_list_add_description"), text: $description)
...
                        } else {
                            saveNewList()
                        }
                        isListToUpdate ? vm.changeFormViewState(to: .closeUpdateList) : vm.changeFormViewState(to: .closeAddList)
                    })
                    .padding(.top, 10)
                    .accessibilityIdentifier("save_list_button")

                } //: VSTACK
                .padding(20)

                Spacer()
            } //: VSTACK
...
