...
                    ))
                    .onChange(of: item.completed, { oldValue, newValue in
                        updateItemOnCheckboxToggle()
                    })
                    .toggleStyle(CustomCheckboxStyle())
                    .foregroundStyle(.darkBlue)
                    .accessibilityIdentifier("complete_item_button")

                    //TEXT, DATE & COMMENT
                    VStack(alignment: .leading, spacing: 2) {
                        Text(item.name ?? L10n.shared.localize("item_row_cellview_unknown"))
                            .font(.system(size: 18, weight: .semibold))
                            .foregroundStyle(.darkBlue)
...
                        actionEditItem()
                    }) {
                        Label(editLabel, systemImage: editIcon)
                            .labelStyle(.iconOnly)
                    }
                    .tint(.mediumBlue)
                    .accessibilityIdentifier("edit_item_button")
                }
            }
        } //: VSTACK MAIN
    }
}

...
